# proto-regulate

./: Cargo.toml  README.md
src/: lib.rs  main.rs  merge.rs  text_gen.rs
tests/: cli_integration.rs  merge_goal_verification.rs
tests/data/edge_cases/: complex_combinations.proto  extensions_proto2.proto  import_combinations.proto  maps_comprehensive.proto  options_comprehensive.proto  proto2_features.proto  proto3_optional.proto
tests/data/edge_cases/import_deps/: api1.proto  api2.proto  deprecated1.proto  deprecated2.proto  first.proto  last.proto  middle.proto
