[package]
name = "proto-regulate"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Protobuf file normalization, merging and formatting tools"
repository = "https://github.com/actor-rtc/proto-regulate"
authors = ["actor-rtc team"]

[dependencies]
anyhow = "1.0.99"
protobuf = "3.7.2"
protobuf-parse = "3.7.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sha2 = "0.10.9"
tempfile = "3.22.0"
const_format = "0.2"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"

[dev-dependencies]
# 测试依赖如果需要会添加
